WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117846
[BlackBerry] Send the correct offsets for misspelled words.
https://bugs.webkit.org/show_bug.cgi?id=117846
Summary
[BlackBerry] Send the correct offsets for misspelled words.
Nima Ghanavatian
Reported
2013-06-20 13:21:47 PDT
When the caret is placed after a word, the offsets were calculated around the proceeding space. As such, words that end a sentence worked correctly, but midsentence words did not. The 'startOfWord' was calculated for the space ahead and not for the word before it. Now finding the start of the word correctly and calculating the end from there.
Attachments
Patch
(3.66 KB, patch)
2013-06-20 13:30 PDT
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
Patch
(3.71 KB, patch)
2013-06-20 13:34 PDT
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nima Ghanavatian
Comment 1
2013-06-20 13:30:51 PDT
Created
attachment 205113
[details]
Patch
Nima Ghanavatian
Comment 2
2013-06-20 13:34:08 PDT
Created
attachment 205114
[details]
Patch
Rob Buis
Comment 3
2013-06-20 13:43:24 PDT
Comment on
attachment 205114
[details]
Patch LGTM.
WebKit Commit Bot
Comment 4
2013-06-20 15:53:02 PDT
Comment on
attachment 205114
[details]
Patch Clearing flags on attachment: 205114 Committed
r151809
: <
http://trac.webkit.org/changeset/151809
>
WebKit Commit Bot
Comment 5
2013-06-20 15:53:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug